# music-explorer

./: .gitignore  Dockerfile  Procfile  README.md  build_image.sh  docker-compose.yml  mkdocs.yml  music-explorer.subdomain.conf  pyproject.toml  requirements.txt  setup.py
config/: config.yml
docs/: reference.md
src/analytics/: __init__.py  artists.py  collection.py
src/app_explorer/: Procfile  __init__.py  app.py  celery_config.py  manifest.json  sw.js  task_simulator.py  tasks.py  worker.py
src/app_explorer/analytics/: __init__.py  artists.py  collection.py  genre_styles.py  main.py  releases.py
src/app_explorer/auth/: auth.py
src/app_explorer/discogs_extractor/: README.md  derive_artist_network.py  derive_artists.py  derive_release.py  discogs.py  extractor.py  extractor_artist.py  extractor_collection.py  extractor_master.py  extractor_release.py
src/app_explorer/route_auth/: auth.py
src/app_explorer/static/: manifest.json  progress_etl.js  service-worker.js
src/app_explorer/static/css/: style.css
src/app_explorer/templates/: about.html  artists.html  artists_all.html  artists_search_results.html  collection_item.html  collection_items.html  collection_items_all.html  collection_items_artist.html  collection_items_search_results.html  config.html  home.html  layout.html  macro_cards.j2
src/app_explorer/templates/artists/: artist.html  artists.html
src/app_explorer/templates/collection_items/: collection_items.html
src/app_loader/: main.py
src/app_loader/discogs_extractor/: derive_artists.py  extractor.py  extractor_master.py  extractor_release.py
src/db_operations/: __init__.py  db.py  manage_db.py  read.py  write.py
src/discogs_extractor/: __init__.py  derive.py  derive_artist_network.py  derive_artists.py  derive_network.py  discogs.py  extractor_artist.py  extractor_collection.py  extractor_master.py  extractor_release.py  extractors.py
src/log_config/: logging_config.py
src/utils/: __init__.py  manage_db.py
